# ai-code-pattern-discovery

./: README.md  pyproject.toml
docs/: Algorithms-DS-Taxonomy.md  Cloud-Architecture-Taxonomy.md  Complexity-Guide.md  Design-Patterns-Taxonomy.md  Pattern-Cross-Reference.md  Prompt-Best-Practices.md  taxonomy-architectural.md
prompts/: algorithms-ds-prompt.md  architectural-patterns-prompt.md  design-patterns-prompt.md  service-collaboration-prompt.md  spec-generation-prompt.md
scripts/: generate_service_collab_prompt.py
specs/: algorithms-data-structures-spec.yaml  cloud-architecture-spec.yaml  design-patterns-spec.yaml  service-collaboration-patterns.yaml
specs/architectural/: microservice-architecture.yaml
specs/messaging/: event-sourcing.yaml  transactional-outbox.yaml
specs/observability/: distributed-tracing.yaml
specs/reliability/: circuit-breaker.yaml
specs/service-boundaries/: business-capability.yaml
specs/service-collaboration/: api-composition.yaml  saga-pattern.yaml
src/ai_code_pattern_discovery/: __init__.py  cli.py  pattern_detector.py  rate_limiter.py
tests/: test_service_collab_prompt.py
