[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-code-pattern-discovery"
version = "0.1.0"
description = "A comprehensive system for discovering, documenting, and understanding code patterns, algorithms, data structures, and architectural patterns using AI-powered analysis"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
ai-code-pattern-discovery = "ai_code_pattern_discovery.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ai-code-pattern-discovery"
Repository = "https://github.com/yourusername/ai-code-pattern-discovery"
Issues = "https://github.com/yourusername/ai-code-pattern-discovery/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_code_pattern_discovery"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "docs/",
    "prompts/",
    "specs/",
    "templates/",
    "examples/",
    "tests/",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]